--- a/templates/base.html
+++ b/templates/base.html
@@ -3,41 +3,56 @@
 <head>
     <title>Pi Garage</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.min.css') }}">
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="{{ url_for('static', filename='jquery.slicknav.min.js') }}"></script>
+    {% block scripts %}{% endblock %}
     <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-    <ul id="mobilemenu">
-        <li><a href="{{ url_for('index') }}">Home</a></li>
-        {% if session.logged_in %}
-            {% if session.is_admin %}
-                <li><a href="{{ url_for('users') }}">Manage Users</a></li>
-            {% endif %}
-            <li><a href="{{ url_for('logout') }}">Logout</a></li>
-        {% endif %}
-    </ul>
     <nav>
         <div class="site-width">
         <h1><a href="{{ url_for('index') }}"><span> Pi </span>Garage </a></h1>
         {% if session.logged_in %}
-            <div>
+            <ul class="menu">
                 {% if session.is_admin %}
-                    <a href="{{ url_for('users') }}">Manage Users</a>
+                <li>
+                    <a class="mobile-menu-item"href="{{ url_for('users') }}">
+                        <i class="fa fa-users"></i>
+                        <span class="main-menu-item">Manage Users</span>
+                    </a>
+                </li>
                 {% endif %}
-                <a href="{{ url_for('logout') }}">Logout</a>
-            </div>
+                <li>
+                    <a class="mobile-menu-item" href="{{ url_for('logout') }}">
+                        <i class="fa fa-sign-out"></i>
+                        <span class="main-menu-item"> Logout </span>
+                    </a>
+                </li>
+            </ul>
         {% endif %}
         </div>
     </nav>
+    {% if error %}
+        <h2 class="notification error">
+            <span> {{ error }} </span>
+        </h2>
+    {%endif%}
+
+    {% if success %}
+        <h2 class="notification success">
+            <span> {{ success }} </span>
+        </h2>
+    {%endif%}
+
+    {% if general %}
+        <h2 class="notification general">
+            <span> {{ general }} </span>
+        </h2>
+    {%endif%}
+
     {% block body %}{% endblock %}
 </body>
-    <script>
-    $(function(){
-        $('#mobilemenu').slicknav({customClass: 'mini', label: 'Pi Garage'});
-    });
-    </script>
 </html>
