--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
 <section id="login" class="narrow-site-width">
-	{% if error %}<span class="login-error"> Invalid Username or Password </span>{%endif%}
-	{% if expired %}<span class="login-error"> Your user has expired </span>{%endif%}
 	<form action="{{ url_for('login') }}" method="post">
-	   	<input type="text" class="textinput" placeholder="Username" name="username">
+	   	<input type="text" class="textinput" {% if username %} value="{{username}}" {% endif %} placeholder="Username" name="username">
 	   	<input type="password" class="textinput" placeholder="Password" name="password">
 	    <input class="button" type="submit" value="Login">
 	</form>
