--- a/templates/users.html
+++ b/templates/users.html
@@ -1,59 +1,61 @@
 {% extends "base.html" %}
+{% block scripts %}
+	<script src="{{ url_for('static', filename='js/users.js') }}"></script>
+{% endblock %}
 {% block body %}
-<section id="users" class="narrow-site-width">
-	<h1> Create User </h1>
-	<hr>
-	<form action="{{ url_for('users') }}" method="post" >
-		<input type="text" class="textinput" placeholder="Username" name="username">
-		<input type="password" class="textinput" placeholder="Password" name="password">
-		<div class="form-option">
-			<input type="checkbox" name="adminuser">
-			<span>Admin</span>
-			<input class="tmpuser" type="checkbox" name="tempuser">
-			<span>Temporary</span>
+<section id="users">
+	<!-- Add Users -->
+	<div class="create-user">
+		<div class="narrow-site-width">
+			<form action="{{ url_for('users') }}" method="post" >
+				<input type="text" class="username" {% if username %} value="{{username}}" {% endif %} placeholder="Username" name="username">
+				<input type="password" class="password" placeholder="Password" name="password">
+				<div class="form-option">
+					<input type="checkbox" name="adminuser">
+					<span>Admin</span>
+					<input class="tmpuser" type="checkbox" name="tempuser">
+					<span>Temporary</span>
+				</div>
+				<input class="date-time hidden" type="date" value="2010-12-16" name="dateTmp">
+			    <input type="submit" class="button" value="Add User">
+			</form>
 		</div>
-		<input class="date-time hidden" type="date" value="2010-12-16" name="dateTmp">
-	    <input type="submit" class="button" value="Add User">
-	</form>
+	</div>
 
-	<h1> Edit Users </h1>
-	<hr>
-	<div id="accordion">
-	  {% for user in users %}
-	    	<h3>Username: {{ user.username }}</h3>
-			<div>
-				<form class="edit-user" action="{{ url_for('edituser') }}?user={{ user.id }}" method="post">
-					<input type="text" class="textinput" placeholder="{{ user.username }}" name="username">
-					<input type="text" class="textinput" placeholder="New Password" name="password">
-					{% if user.experationDate != 'False'%} <input class="date-time" type="date" value="{{ user.experationDate }}" name="dateTmp"> {% endif %}
+	<!-- Editing Users -->
+	<div class="edit-users narrow-site-width">
+		<div id="accordion">
+		  {% for user in users %}
+		    	<h3 class="accordian_{{ user.id }}">
+					<span>{{ user.username }}</span>
 					<div>
-						<input type="checkbox" name="adminuser" {% if user.admin == True %} checked {% endif %}>
-						<span>Admin User</span>
+						{% if user.admin %}
+							<i class="fa fa-star-o"></i>
+						{% endif %}
+						{% if user.experationDate != 'False' %}
+							<i class="fa fa-clock-o"></i>
+						{% endif %}
+						<i data-id="{{ user.id }}" class="fa fa-trash-o"></i>
 					</div>
-					<input type="submit" class="button" value="Update User">
-				</form>
-			</div>
-	  {% endfor %}
+				</h3>
+				<div class="accordian_{{ user.id }}">
+					<form class="edit-user" action="{{ url_for('edituser') }}?userID={{ user.id }}" method="post">
+						<input type="text" class="username" placeholder="{{ user.username }}" name="username">
+						<input type="password" class="password" placeholder="New Password" name="password">
+						{% if user.experationDate != 'False'%}
+							<input class="date-time" type="date" value="{{ user.experationDate }}" name="dateTmp">
+						{% else %}
+							<div>
+								<input type="checkbox" name="adminuser" class="admin-checkbox" {% if user.admin %} checked {% endif %}>
+								<span>Admin User</span>
+							</div>
+						{% endif %}
+						<input type="submit" class="button update-user" value="Update User">
+					</form>
+				</div>
+		  {% endfor %}
+		</div>
 	</div>
 </section>
-
-<script>
-$('.tmpuser').change(function(){
-    if($(this).is(":checked")) {
-        $('.date-time').addClass("visible");
-		$('.date-time').removeClass("hidden");
-
-    } else {
-        $('.date-time').addClass("hidden");
-		$('.date-time').removeClass("visible");
-    }
-});
-
-$(function() { $( "#accordion" ).accordion({
-	active: false,
-	collapsible: true
-});});
-</script>
-
 
 {% endblock %}
