--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,33 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Other -->
     <title>Pi Garage</title>
+    <meta name="viewport" content="width=device-width">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,700,400,300" rel="stylesheet" type="text/css">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.min.css') }}">
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    {% block scripts %}{% endblock %}
-    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.min.css') }}">
 </head>
 
 <body>
     <nav>
         <div class="site-width">
-        <h1><a href="{{ url_for('index') }}"><span> Pi </span>Garage </a></h1>
+        <h1>
+            <a href="{{ url_for('index') }}">
+                <img src="{{ url_for('static', filename='img/logo.svg') }}">
+                <span> Gatehouse </span>
+            </a>
+        </h1>
         {% if session.logged_in %}
             <ul class="menu">
                 {% if session.is_admin %}
                 <li>
-                    <a class="mobile-menu-item"href="{{ url_for('users') }}">
+                    <a class="mobile-menu-item" href="{{ url_for('users') }}">
                         <i class="fa fa-users"></i>
                         <span class="main-menu-item">Manage Users</span>
                     </a>
@@ -54,5 +62,10 @@
     {%endif%}
 
     {% block body %}{% endblock %}
+
+    <!-- Scripts -->
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
