Font weight adjustments

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <!-- Other -->
+    <!-- Page Info -->
     <title>Pi Garage</title>
     <meta name="viewport" content="width=device-width">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200,700,400,300" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,500,600" rel="stylesheet" type="text/css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.min.css') }}">
+
 </head>
 
 <body>
