--- a/static/style.css
+++ b/static/style.css
@@ -1,31 +1,3 @@
-
-/* Fonts */
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Oswald Light'), local('Oswald-Light'), url(http://fonts.gstatic.com/s/oswald/v10/HqHm7BVC_nzzTui2lzQTDZBw1xU1rKptJj_0jans920.woff2) format('woff2'), url(http://fonts.gstatic.com/s/oswald/v10/HqHm7BVC_nzzTui2lzQTDbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oswald Regular'), local('Oswald-Regular'), url(http://fonts.gstatic.com/s/oswald/v10/_P8jt3Y65hJ9c4AzRE0V1OvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2'), url(http://fonts.gstatic.com/s/oswald/v10/qpy-UiLNKP-VfOdbcs6r6-vvDin1pK8aKteLpeZ5c0A.woff) format('woff');
-}
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Oswald Bold'), local('Oswald-Bold'), url(http://fonts.gstatic.com/s/oswald/v10/bH7276GfdCjMjApa_dkG6ZBw1xU1rKptJj_0jans920.woff2) format('woff2'), url(http://fonts.gstatic.com/s/oswald/v10/bH7276GfdCjMjApa_dkG6bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'apple';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/apple.ttf') format("truetype");
-}
-
 /* Global CSS */
 html {
   font-size: 62.5%;
@@ -49,15 +21,14 @@ a:hover,
 a:visited {
   color: #37D483;
   text-decoration: none;
-  font-family: Oswald;
+  font-family: Raleway;
   font-weight: 300;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
-  font-family: Oswald;
-  text-transform: uppercase;
-  font-weight: 300;
+  font-family: Raleway;
+  font-weight: 500;
 }
 
 h1 {
@@ -70,7 +41,7 @@ h2 {
 
 p {
   font-size: 1.5rem;
-  font-family: Oswald;
+  font-family: Raleway;
   font-weight: 300;
 }
 
@@ -79,7 +50,7 @@ p {
 }
 
 form {
-  font-family: Oswald;
+  font-family: Raleway;
   font-size: 2rem;
   text-align: center;
   font-weight: 300;
@@ -95,10 +66,10 @@ form input {
   width: 100%;
   margin-top: 1rem;
   height: 4rem;
-  font-family: Oswald;
+  font-family: Raleway;
   font-size: 2rem;
   text-align: center;
-  font-weight: 300;
+  font-weight: 400;
   outline: 0;
 }
 
@@ -126,7 +97,7 @@ form input.button {
 }
 
 .ui-widget input {
-    font-family: Oswald;
+    font-family: Raleway;
     font-size: 2rem;
 }
 
@@ -178,7 +149,8 @@ nav .site-width {
 
 nav h1 a span {
     display: none;
-    color: white
+    color: white;
+    font-weight: 200;
 }
 
 nav .menu {
@@ -194,6 +166,7 @@ nav .menu li {
 
 nav .menu li a {
     font-size: 2.5rem;
+    font-weight: 200;
     color: white;
     height: 100%;
     display: flex;
@@ -226,10 +199,8 @@ nav .menu .main-menu-item {
     height: 10rem;
     font-size: 4rem;
     background-color: #37D483;
-}
-
-#index .wrapper form input {
     border-radius: 0;
+    font-weight: 400;
 }
 
 /* Users */
@@ -282,6 +253,10 @@ nav .menu .main-menu-item {
     margin-right: .3rem;
     width: auto;
     height: auto;
+}
+
+#users form div span {
+    font-weight: 400;
 }
 
 #users form div input:last-of-type {
