--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,7 @@ form input {
   font-family: Raleway;
   font-size: 2rem;
   text-align: center;
-  font-weight: 400;
+  font-weight: 300;
   outline: 0;
 }
 
@@ -256,6 +256,7 @@ nav .menu .main-menu-item {
 
 #users form div span {
     font-weight: 400;
+    color: #757575;
 }
 
 #users form div input:last-of-type {
