--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 			<form class="narrow-site-width"  method="post">
 			    <input class="button" type="submit" value="Toggle Door">
 			</form>
+			<span class="doorstatus"> </span>
 		</div>
 	</section>
 {% endblock %}
