--- a/static/style.css
+++ b/static/style.css
@@ -207,6 +207,17 @@ nav .site-width.login {
     font-weight: 400;
 }
 
+#index .doorstatus {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5rem;
+    font-size: 4rem;
+    font-family: Raleway;
+    color: #37D483;
+    font-weight: 700;
+}
+
 /* Users */
 
 #users {
